# nutorch

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  nutorch.nu
.cargo/: config.toml
.claude/agents/: adversarial-reviewer.md
cargo/test/: test_reshape.nu
issues/: README.md
issues/0001-archive-v1/: 01-move-v1-and-repoint-docs.md  README.md
issues/0002-nutorchd-poc/: 01-toolchain-proof.md  02-daemon-spine.md  03-compute-ops.md  README.md
issues/0003-mps-only/: 01-remove-device-option.md  README.md
issues/0004-daemon-lifecycle/: README.md
issues/0005-tensor-op-suite/: 01-op-table-architecture.md  03-reductions-comparison-sweep.md  05-creation-and-remainder.md  README.md
issues/0006-tensor-lifecycle-and-roundtrip/: README.md
issues/0007-daemon-concurrency/: README.md
issues/0008-autograd/: README.md
issues/0009-nn-optim/: 01-typed-handles.md  02-module-foundation.md  04-optimizers.md  05-module-sweep.md  06-save-load.md  README.md
issues/0010-nushell-module/: 01-nu-module.md  README.md
issues/0011-homebrew-distribution/: 01-relocatable-substrate.md  03-publication.md  README.md
issues/0012-nutorch-dot-com/: 02-the-docs.md  README.md
issues/0013-website-fixes/: 01-astrohacker-footer.md  02-mit-license.md  03-hero-rework.md  04-three-state-theme.md  README.md
nutorchd/: Cargo.toml  build.rs
ops/: Cargo.toml
scripts/: bootstrap.sh  build-issues-index.sh  gen-golden.py  install.sh  make-source-tarball.sh  train-regression.nu
torch-cli/: Cargo.toml
torch-cli/src/: main.rs
website/: astro.config.mjs  package.json
(+53 files in other folders)
