[package]
name = "torch-cli"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Nutorch v2 thin client: talk to nutorchd from any shell (PoC)"

[[bin]]
name = "torch"
path = "src/main.rs"

[dependencies]
nutorch-ops = { path = "../ops" }
serde_json = { version = "1", features = ["float_roundtrip"] }
